--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,7 @@
 @import "~bootstrap/dist/css/bootstrap.min.css";
+body {
+  background-color: green;
+}
+#pokerCard {
+  background-color: white;
+}
